# flarb

./: .env.example  .gitignore  Cargo.toml  README.md  package.json
.VSCodeCounter/2024-12-18_03-50-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
jupiter-swap-api/: README.md  errors.txt  sdk_quote.rs
markets/: README.md  dex.json
pools/: README.md  dex.json  pools.json  tokens.json
src/: arbitrage.rs  config.rs  data.rs  decoder.rs  fetch_address.rs  graph.rs  lib.rs  macros.rs  main.rs  math.rs  params.rs  predict.rs  router.rs  test_param.rs  ws_meteora.rs  ws_orca.rs  ws_parser.rs  ws_raydium.rs
src/helius/: custom.rs  mod.rs  websocket.rs
src/jupiter/: fetch_address.rs  mod.rs  orca_pool.rs  quote.rs  raydium_pool.rs
src/markets/: fetch_address.rs  mod.rs  orca_test.rs  whirlpool.rs
src/websocket/: ws_parser.rs
