[package]
name = "flarb"
version = "0.1.0"
edition = "2021"
authors = ["brahman"]
description = "High Performance MEV Bot"
repository = "https://github.com/Panda404NotFound"

[lib]
path = "src/lib.rs"

[package.metadata.membership]
include = ["src/**/*.rs"]
auto-export = true
exclude = []
reexport = true

[dependencies]
log = "0.4.20"
tracing = "0.1.39"
env_logger = "0.10.0"
dotenv = "0.15"
lazy_static = "1.4"
anyhow = "1.0.76"

serde = { version = "1.0.192", features = ["derive"] }

tokio = { version = "1.36.0", features = ["full"] }

solana-client = "1.17"
solana-program = "2.1.5"
spl-token = "7.0.0"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

orca_whirlpools_client = "1.0.0"
orca_whirlpools = "1.0.0"
orca_whirlpools_core = "1.0.0"